--- a/app/src/main/res/layout/fragment_emp_available_activities.xml
+++ b/app/src/main/res/layout/fragment_emp_available_activities.xml
@@ -4,33 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".User.HistoryFragment">
+    tools:context=".Employee.EmpAvailableActivities">
 
     <!-- TODO: Update blank fragment layout -->
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/HistoryActivityToolbar"
+            android:id="@+id/empAvailableActivitiesToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
-            app:title="My History"
+            app:title="Requests"
             tools:ignore="MissingConstraints" />
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/garbageHistoryRecycleView"
-            android:layout_width="400dp"
-            android:layout_height="661dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:id="@+id/empAvaliableActivitiesRecycleView"
+            android:layout_width="403dp"
+            android:layout_height="679dp"
+            android:layout_marginTop="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/HistoryActivityToolbar" />
+            app:layout_constraintTop_toBottomOf="@+id/empAvailableActivitiesToolbar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </FrameLayout>
