--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -4,14 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserProfile">
+    tools:context=".User.UserProfile">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ProfileLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
+        app:title="My Profile"
+        tools:ignore="MissingConstraints"
+        ></androidx.appcompat.widget.Toolbar>
         <Button
             android:id="@+id/ProfileSignOut"
             android:layout_width="match_parent"
@@ -23,10 +30,10 @@
 
         <ImageView
             android:id="@+id/ProfileImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="140dp"
-            android:layout_marginTop="44dp"
+            android:layout_width="245dp"
+            android:layout_height="138dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="76dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars" />
@@ -37,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="29dp"
             android:textSize="24sp"
+            android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ProfileImage" />
 
@@ -46,6 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="212dp"
             android:textSize="24sp"
+            android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ProfileImage" />
 
@@ -55,15 +64,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="96dp"
             android:textSize="24sp"
+            android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ProfileImage" />
 
         <TextView
-            android:id="@+id/ProfieNumber"
+            android:id="@+id/ProfileNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="156dp"
             android:textSize="24sp"
+            android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ProfileImage" />
 
